/*
 * $Id: ChangeLog,v 1.2160 2004/01/27 21:18:59 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-27 19:35 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
  * source/vm/itemapi.c
    ! fixes to hb_itemStr and  hb_itemString (mask for sprintf I64d on linux
     give  functions like directory return an ******* insted of numeric)

2004-01-28 10:20 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/file.c
    * hb_fsFile() update to fail on Win32 for a directory. Fixes FILE()
    * hb_fsIsDirectory() update to correctly report Win32 directory if
      last character of *pFilename == '\'
  * /source/rtl/hbffind.c
    * hb_fsFindFirst() for Win32. Update to be Clipper compatible when
      last character of *pszFileName == '\'. Clipper appears to add "*.*"
      This change fixes DIRECTORY()

      ( Note: These change MAY be required for DOS, OS2, UNIX & MAC )

2004-01-27 09:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    * Moved Done label in hb_vmExecute() below line restoring Private Base, becuase CodeBlocks do not affect Private Base.

2004-01-27 18:15 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/harbour.c
    * Fixed a memory leak introduced by recent changes. Thanks to Andi Jahja.

2004-01-27 14:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
    * fixed generation of line number's pcode related to the debugger
      (merged in from Harbour, by Ryszard Glab)
  * source/debug/dbgmenu.prg
  * source/debug/debugger.prg
    * added support for "Run to cursor" command; minor fixes in
      breakpoints handling (some code lines are not allowed to set a
      breakpoint and run to cursor)
      (merged in from Harbour, by Ryszard Glab)

2004-01-27 13:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>