@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2160 2004/01/27 21:18:59 peterrees Exp $
+ * $Id: ChangeLog,v 1.2161 2004/01/27 21:40:45 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,9 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-01-28 04:45:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/rtl/files.c
+    ! castings
 
 2004-01-27 19:35 UTC-0300 Luiz Rafael Culik <culikr@brturbo.com>
   * source/vm/itemapi.c
